--- a/index.html
+++ b/index.html
@@ -5,29 +5,34 @@
     <title>User Registration</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- jQuery -->
+    <!-- jQuery Library -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <style>
+        /*BASIC PAGE STYLING*/
         body {
             font-family: Arial, sans-serif;
-            background: #d3d3d3;
+            background: grey;
             margin: 0;
         }
 
+        /*FORM CONTAINER*/
         .container {
             max-width: 420px;
-            background: #fff;
+            background: white;
             margin: 40px auto;
             padding: 25px;
             border-radius: 6px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
         }
 
+        /*HEADING*/
         h2 {
             text-align: center;
-            color: #6b2c2c;
+            color: brown;
         }
 
+        /*FORM GROUP*/
         .form-group {
             margin-bottom: 14px;
         }
@@ -41,7 +46,7 @@
         input, textarea {
             width: 100%;
             padding: 8px;
-            border: 1px solid #ccc;
+            border: 1px solid white;
             border-radius: 4px;
         }
 
@@ -49,14 +54,15 @@
             resize: none;
         }
 
+        /*MOBILE NUMBER FIELD*/
         .mobile-box {
             display: flex;
         }
 
         .code {
             padding: 8px;
-            background: #eee;
-            border: 1px solid #ccc;
+            background: white;
+            border: 1px solid white;
             border-right: none;
         }
 
@@ -64,29 +70,42 @@
             border-radius: 0 4px 4px 0;
         }
 
+        /*GENDER OPTIONS*/
         .gender {
             display: flex;
             gap: 15px;
         }
 
+        /*ERROR MESSAGES*/
         .error {
             color: red;
             font-size: 12px;
             display: none;
         }
 
+        /*SUBMIT BUTTON */
         button {
             width: 100%;
             padding: 10px;
-            background: #007bff;
+            background: blue;
             border: none;
             color: white;
             cursor: pointer;
             opacity: 0.6;
+            border-radius: 4px;
         }
 
         button:enabled {
             opacity: 1;
+        }
+
+        /*PREVIEW SECTION*/
+        #preview {
+            display: none;
+            margin-top: 20px;
+            background: white;
+            padding: 15px;
+            border-radius: 6px;
         }
     </style>
 </head>
@@ -96,22 +115,26 @@
 <div class="container">
     <h2>User Registration</h2>
 
+    <!--REGISTRATION FORM -->
     <form id="form">
 
+        <!--Full Name-->
         <div class="form-group">
-            <label>Full Name</label>
+            <label>Full Name:</label>
             <input id="name">
             <span class="error" id="nameErr">Only alphabets allowed</span>
         </div>
 
+        <!--Address-->
         <div class="form-group">
-            <label>Address</label>
+            <label>Address:</label>
             <textarea id="address" rows="3"></textarea>
             <span class="error" id="addrErr">Address required</span>
         </div>
 
+        <!--Mobile Number-->
         <div class="form-group">
-            <label>Mobile Number</label>
+            <label>Mobile Number:</label>
             <div class="mobile-box">
                 <div class="code">+91</div>
                 <input id="mobile" maxlength="10">
@@ -121,16 +144,18 @@
             </span>
         </div>
 
+        <!--Email-->
         <div class="form-group">
-            <label>Email</label>
+            <label>Email:</label>
             <input id="email">
             <span class="error" id="emailErr">
-                Only Gmail allowed
+                Only Gmail allowed (example@gmail.com)
             </span>
         </div>
 
+        <!-- Gender -->
         <div class="form-group">
-            <label>Gender</label>
+            <label>Gender:</label>
             <div class="gender">
                 <label><input type="radio" name="gender" value="Male"> Male</label>
                 <label><input type="radio" name="gender" value="Female"> Female</label>
@@ -139,66 +164,106 @@
             <span class="error" id="genderErr">Select gender</span>
         </div>
 
+        <!--Date of Birth-->
         <div class="form-group">
-            <label>Date of Birth</label>
+            <label>Date of Birth:</label>
             <input type="date" id="dob">
+            <span class="error" id="dobErr">Please select date of birth</span>
         </div>
 
+        <!--Submit Button-->
         <button id="submit" disabled>Submit</button>
     </form>
+
+    <!--PREVIEW SECTION-->
+    <div id="preview">
+        <h3>Preview Details</h3>
+        <p><b>Name:</b> <span id="pName"></span></p>
+        <p><b>Address:</b> <span id="pAddress"></span></p>
+        <p><b>Mobile:</b> <span id="pMobile"></span></p>
+        <p><b>Email:</b> <span id="pEmail"></span></p>
+        <p><b>Gender:</b> <span id="pGender"></span></p>
+        <p><b>DOB:</b> <span id="pDob"></span></p>
+    </div>
 </div>
 
 <script>
 $(function () {
 
+    /*FORM VALIDATION FUNCTION*/
     function validate() {
         let ok = true;
 
+        // Get input values
         const name = $("#name").val().trim();
-        const addr = $("#address").val().trim();
-        const mob = $("#mobile").val().trim();
+        const address = $("#address").val().trim();
+        const mobile = $("#mobile").val().trim();
         const email = $("#email").val().trim();
         const gender = $("input[name='gender']:checked").val();
+        const dob = $("#dob").val();
 
+        // Regular expressions
         const nameR = /^[A-Za-z ]+$/;
         const mobR = /^[6-9][0-9]{9}$/;
         const gmailR = /^[a-zA-Z0-9._%+-]+@gmail\.com$/;
 
+        // Show or hide error messages
         $("#nameErr").toggle(!nameR.test(name));
-        $("#addrErr").toggle(addr === "");
-        $("#mobErr").toggle(!mobR.test(mob));
+        $("#addrErr").toggle(address === "");
+        $("#mobErr").toggle(!mobR.test(mobile));
         $("#emailErr").toggle(!gmailR.test(email));
         $("#genderErr").toggle(!gender);
+        $("#dobErr").toggle(dob === "");
 
+        // Final validation check
         if (
             !nameR.test(name) ||
-            addr === "" ||
-            !mobR.test(mob) ||
+            address === "" ||
+            !mobR.test(mobile) ||
             !gmailR.test(email) ||
-            !gender
-        ) ok = false;
+            !gender ||
+            dob === ""
+        ) {
+            ok = false;
+        }
 
+        // Enable or disable submit button
         $("#submit").prop("disabled", !ok);
         return ok;
     }
 
+    // Validate on input change
     $("input, textarea").on("keyup change", validate);
 
-    $("#form").submit(function (e) {
+    /*FORM SUBMISSION*/
+    $("#form").on("submit", function (e) {
         e.preventDefault();
+
+        // Stop if validation fails
         if (!validate()) return;
 
+        // Collect form data
         const data = {
-            name,
+            name: $("#name").val(),
             address: $("#address").val(),
             mobile: "+91" + $("#mobile").val(),
             email: $("#email").val(),
-            gender,
+            gender: $("input[name='gender']:checked").val(),
             dob: $("#dob").val()
         };
 
+        // Save data in localStorage
         localStorage.setItem("userData", JSON.stringify(data));
-        alert("Registration successful!");
+
+        // Display preview
+        $("#pName").text(data.name);
+        $("#pAddress").text(data.address);
+        $("#pMobile").text(data.mobile);
+        $("#pEmail").text(data.email);
+        $("#pGender").text(data.gender);
+        $("#pDob").text(data.dob);
+
+        $("#preview").slideDown();
     });
 
 });
